feat(core): implemented admin user bootstrapping
